# ika-btc-demo

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
anchor/: Anchor.toml  Cargo.toml
anchor/programs/ika_btc_policy/: Cargo.toml
anchor/programs/ika_btc_policy/src/: lib.rs
docs/: BTC_SIGNING_FLOW.md  IKA_SOLANA_NOTES.md
scripts/: build-spend.ts  derive-btc-address.ts  inspect-address.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: BtcDwalletDemo.tsx  SolanaWalletButton.tsx
src/lib/bitcoin/: address.ts  bytes.ts  explorer.ts  transaction.ts
src/lib/ika/: approval.ts  client.ts  config.ts  pda.ts  persistence.ts  types.ts
src/lib/ika/prealpha/: grpc-web.ts
src/lib/local-signer/: solanaControlledSigner.ts
src/lib/solana/: cluster.ts
tests/: bitcoin-address.test.ts  local-signer.test.ts
